ajout du style des listes et icons

--- a/index.html
+++ b/index.html
@@ -1,152 +1,188 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-    <meta charset="utf- 8" />
+    <meta charset="utf-8" />
     <title>Titre de la page</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="script.js"></script>
   </head>
 
-  
-    <h1>Zélal OZKAN</h1>
-    <img src="photonws.jpg" alt="cv zelal" width="110" height="150"/>
-    <p class="sous-titre">
-      Candidature pour un contrat d'alternance en communication graphique
-    </p>
-    <p class="intro">
-      Actuellement étudiante en 1ère année à la formation Normandie Web School,
-      j'ai pour objectif de devenir une experte dans le domaine du
-      <strong> design.</strong> J'ai acquis et
-      <strong> continue d'apprendre par moi-même </strong> les compétences
-      nécessaires.
-    </p>
-
-    <p>
-      zozkan@normandiewebschool.fr <br />
+  <body>
+    <main>
+      <!--c'est le contenu de la page depuis le début-->
+      <header>
+        <!--le sujet du CV-->
+        <h1>Zélal OZKAN</h1>
+        <img src="photonws.jpg" alt="cv zelal" width="110" height="150" />
+        <p class="sous-titre">
+          <!--ce qu'on doit voir en premier pour savoir le sujet-->
+          Candidature pour un contrat d'alternance en communication graphique
+        </p>
+        <p class="intro">
+          Actuellement étudiante en 1ère année à la formation Normandie Web
+          School, j'ai pour objectif de devenir une experte dans le domaine du
+          <strong> design.</strong> J'ai acquis et
+          <strong> continue d'apprendre par moi-même </strong> les compétences
+          nécessaires.
+        </p>
+      </header>
+      <section>
+        <!--les contacts sont des regroupements de contenus proches-->
+        <p></p>
         <table>
-            <tr>
-                <td><strong>Mail</strong></td>
-                <td>zozkan@normandiewebschool.fr</td>
-            </tr>
-            <tr>
-                <td><strong>LinkedIn</strong></td>
-                <td>Zélal Ozkan</td>
-            </tr>
-            <tr>
-                <td><strong>Behance</strong>(portfolio)</td>
-                <td>Zélal Ozkan</td>
-            </tr>
-            <tr>
-                <td><strong>Adresse</strong></td>
-                <td>67, rue du 11 Novembre 1918 <br/>
-                LOUVIERS</td>
-            </tr>
-            <tr>
-                <td><strong>Téléphone</strong></td>
-                <td>07 68 67 87 44</td>
-            </tr>
+          <tr>
+            <td><strong>Mail</strong></td>
+            <td>
+              <a href="mailto:zozkan@normandiewebschool.fr"
+                >zozkan@normandiewebschool.fr</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td><strong>LinkedIn</strong></td>
+            <td>
+              <a
+                href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
+                target="_blank"
+                >Zélal Ozkan</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td><strong>Behance</strong>(portfolio)</td>
+            <td>
+              <a href="https://www.behance.net/zsultanozkan" target="_blank"
+                >Zélal Ozkan</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td><strong>Adresse</strong></td>
+            <td>67, rue du 11 Novembre 1918 LOUVIERS</td>
+          </tr>
+          <tr>
+            <td><strong>Téléphone</strong></td>
+            <td><a href="tel:0768678744">07 68 67 87 44</a></td>
+          </tr>
         </table>
-
-
-    <h2>Formations</h2>
-    <ul>
-
-        <li>
-            <h3> Normandie Web School - 2023/2026</h3>
-            <p>
-                Bachelor chef de projet digital - 
-                <strong>
-                    Communication graphique
-                </strong>
-            </p>
-            <ul>
-                <li> Veille et culture design</li>
-                <li> Fondamentaux identité visuelle</li>
-                <li> Print</li>
-                <li> Visuels pour le web et les réseaux sociaux</li>
-                <li> Maquettes et prototypage</li>
-            </ul>
-        </li>
-        <li>
-            <h3>Lycée Les Fontenelles - 2020/2023</h3> 
-            <p>
-                Baccalauréat Général spécialité mathématiques et LLCER anglais
-            </p>
-        </li>
-    </ul>
-
-    
-    <h2>Expériences</h2>  
-    <ul>
-        <li>
-            <h3>Stage de 3ème <br/>
-            Pharmacie des Plantes - 2020 à Paris</h3>
-        </li>
+      </section>
+      <section class="formation">
+        <!--idem pour formation-->
+        <h2>Formations</h2>
         <ul>
-            <li>Organiser les rangements des rayons et des stocks</li>
-            <li>Adapter envers les clients</li>
-            <li>Observer et assister aux pharmaciens dans la délivrances des médicaments et le conseil aux patients
-            </li>
-        </ul>
-        <li>
-            <h3>Stage d'été<br/>
-            Acacias Retouche - 2019 à Paris </h3>
-            <ul>
-                <li>Organiser et ranger les tissus</li>
-                <li>Apprentissage des techniques de retouches, ourlets et ajustement de vêtements</li>
-                <li> <strong> Capacité à être créative et imaginative</strong> à la création (trousse, sac, foulard,...)</li>
-            </ul>
-        </li>
-    </ul>
-    <h2>Compétences</h2>
-    <ul>
-        <li>
-            <h3>Soft Skills<br/>
+          <li>
+            <h3>
+              <a href="https://normandiewebschool.fr/" target="_blank"
+                >Normandie Web School</a
+              >
+              - 2023/2026
             </h3>
-        </li>
+            <p>
+              Bachelor chef de projet digital -
+              <strong> Communication graphique </strong>
+            </p>
+            <ul>
+              <li>Veille et culture design</li>
+              <li>Fondamentaux identité visuelle</li>
+              <li>Print</li>
+              <li>Visuels pour le web et les réseaux sociaux</li>
+              <li>Maquettes et prototypage</li>
+            </ul>
+          </li>
+          <li>
+            <h3>Lycée Les Fontenelles - 2020/2023</h3>
+            <p>
+              Baccalauréat Général spécialité mathématiques et LLCER anglais
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="experience">
+        <!--expériences aussi-->
+        <h2>Expériences</h2>
+        <h3>Stage de 3ème: Pharmacie des Plantes - 2020 à Paris</h3>
         <ul>
-            <li>Organisation et gestion du temps</li>
-            <li>Discipline et rigueur</li>
-            <li><strong>Créative</strong>, active et capable de trouver des idées pour partager en équipe</li>
-            <li>Motivée, autonome et autodidacte</li>
+          <li>Organiser les rangements des rayons et des stocks</li>
+          <li>Adapter envers les clients</li>
+          <li>
+            Observer et assister aux pharmaciens dans la délivrances des
+            médicaments et le conseil aux patients
+          </li>
         </ul>
-            <li>
-                <h3>Hard Skills</h3>
-            </li>
-                <ul>
-                    <li>Maîtrise des outils nécessaires de la <strong> Suite Adobe </strong> et outils colaboratifs</li>
-                    <li>Expérience dans l'utilisation de logiciels d'image de synthèse</li>
-                </ul>
-            </li>
-        </ul>
-
+        <h3>Stage d'été Acacias Retouche - 2019 à Paris</h3>
         <ul>
-            <li>
-                <h3>Langues (autodidacte)</h3>
-            </li>
-                <ul> 
-                    <li>Anglais</li>
-                    <li>Turc</li>
-                    <li>Espagnol</li>
-                    <li>Russe</li>
-                </ul>
+          <li>Organiser et ranger les tissus</li>
+          <li>
+            Apprentissage des techniques de retouches, ourlets et ajustement de
+            vêtements
+          </li>
+          <li>
+            <strong> Capacité à être créative et imaginative</strong> à la
+            création (trousse, sac, foulard,...)
+          </li>
         </ul>
-</p>
+      </section>
 
+      <section>
+        <!--compétences regroupent les contenues soft skills, hard skills et les langues-->
+        <h2>Compétences</h2>
+        <h3>Soft Skills</h3>
+        <ul>
+          <li>Organisation et gestion du temps</li>
+          <li>Discipline et rigueur</li>
+          <li>
+            <strong>Créative</strong>, active et capable de trouver des idées
+            pour partager en équipe
+          </li>
+          <li>Motivée, autonome et autodidacte</li>
+        </ul>
 
-<h2>Loisirs</h2>
-<ul>
-    <li>Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse, Grèce et Turquie) </li>
-    <li>Dessiner (beaucoup)</li>
-</ul>
+        <h3>Hard Skills</h3>
+        <ul>
+          <li>
+            Maîtrise des outils nécessaires de la
+            <strong> Suite Adobe </strong> et outils colaboratifs
+          </li>
+          <li>
+            Expérience dans l'utilisation de logiciels d'image de synthèse
+          </li>
+        </ul>
 
-
-</body>
+        <h3>Langues (autodidacte)</h3>
+        <ul>
+          <li>Anglais</li>
+          <li>Turc</li>
+          <li>Espagnol</li>
+          <li>Russe</li>
+        </ul>
+      </section>
+      <section class="loisir">
+        <!--ils regrouppent mes loisirs-->
+        <h2>Loisirs</h2>
+        <ul>
+          <li>
+            Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse,
+            Grèce et Turquie)
+          </li>
+          <li>Dessiner (beaucoup)</li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
