--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="photonws.jpg" alt="cv zelal" width="110" height="150" />
         <p class="sous-titre">
           <!--ce qu'on doit voir en premier pour savoir le sujet-->
-          Candidature pour un contrat d'alternance en communication graphique
+          <strong>Candidature pour un contrat d'alternance en communication graphique</strong>
         </p>
         <p class="intro">
           Actuellement étudiante en 1ère année à la formation Normandie Web
@@ -41,55 +41,51 @@
           nécessaires.
         </p>
       </header>
-      <section>
-        <!--les contacts sont des regroupements de contenus proches-->
-        <p></p>
-        <table>
-          <tr>
-            <td><strong>Mail</strong></td>
-            <td>
-              <a href="mailto:zozkan@normandiewebschool.fr"
-                >zozkan@normandiewebschool.fr</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td><strong>LinkedIn</strong></td>
-            <td>
-              <a
-                href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
-                target="_blank"
-                >Zélal Ozkan</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td><strong>Behance</strong>(portfolio)</td>
-            <td>
-              <a href="https://www.behance.net/zsultanozkan" target="_blank"
-                >Zélal Ozkan</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td><strong>Adresse</strong></td>
-            <td>67, rue du 11 Novembre 1918 LOUVIERS</td>
-          </tr>
-          <tr>
-            <td><strong>Téléphone</strong></td>
-            <td><a href="tel:0768678744">07 68 67 87 44</a></td>
-          </tr>
-        </table>
-      </section>
+        <section>
+            <!--les contacts sont des regroupements de contenus proches-->
+            <table>
+            <tr>
+                <td><img src="email.png" width="15px"></td>
+                <td>
+                <a href="mailto:zozkan@normandiewebschool.fr"
+                    >zozkan@normandiewebschool.fr</a
+                >
+                </td>
+            </tr>
+            <tr>
+                <td><strong>LinkedIn</strong></td>
+                <td>
+                <a
+                    href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
+                    target="_blank"
+                    >Zélal Ozkan</a
+                >
+                </td>
+            </tr>
+            <tr>
+                <td><strong>Behance</strong>(portfolio)</td>
+                <td>
+                <a href="https://www.behance.net/zsultanozkan" target="_blank"
+                    >Zélal Ozkan</a
+                >
+                </td>
+            </tr>
+            <tr>
+                <td><strong>Adresse</strong></td>
+                <td>67, rue du 11 Novembre 1918 LOUVIERS</td>
+            </tr>
+            <tr>
+                <td><strong>Téléphone</strong></td>
+                <td><a href="tel:0768678744">07 68 67 87 44</a></td>
+            </tr>
+            </table>
+        </section>
       <section class="formation">
         <!--idem pour formation-->
         <h2>Formations</h2>
-        <ul>
-          <li>
+
             <h3>
-              <a href="https://normandiewebschool.fr/" target="_blank"
-                >Normandie Web School</a
-              >
+              <a href="https://normandiewebschool.fr/" target="_blank">Normandie Web School</a>
               - 2023/2026
             </h3>
             <p>
@@ -97,20 +93,19 @@
               <strong> Communication graphique </strong>
             </p>
             <ul>
-              <li>Veille et culture design</li>
-              <li>Fondamentaux identité visuelle</li>
-              <li>Print</li>
-              <li>Visuels pour le web et les réseaux sociaux</li>
-              <li>Maquettes et prototypage</li>
+              <li> Veille et culture design</li>
+              <li> Fondamentaux identité visuelle</li>
+              <li> Print</li>
+              <li> Visuels pour le web et les réseaux sociaux</li>
+              <li> Maquettes et prototypage</li>
             </ul>
           </li>
-          <li>
             <h3>Lycée Les Fontenelles - 2020/2023</h3>
             <p>
               Baccalauréat Général spécialité mathématiques et LLCER anglais
             </p>
           </li>
-        </ul>
+
       </section>
 
       <section class="experience">
@@ -118,8 +113,8 @@
         <h2>Expériences</h2>
         <h3>Stage de 3ème: Pharmacie des Plantes - 2020 à Paris</h3>
         <ul>
-          <li>Organiser les rangements des rayons et des stocks</li>
-          <li>Adapter envers les clients</li>
+          <li> Organiser les rangements des rayons et des stocks</li>
+          <li> Adapter envers les clients</li>
           <li>
             Observer et assister aux pharmaciens dans la délivrances des
             médicaments et le conseil aux patients
@@ -127,9 +122,8 @@
         </ul>
         <h3>Stage d'été Acacias Retouche - 2019 à Paris</h3>
         <ul>
-          <li>Organiser et ranger les tissus</li>
-          <li>
-            Apprentissage des techniques de retouches, ourlets et ajustement de
+          <li> Organiser et ranger les tissus</li>
+          <li> Apprentissage des techniques de retouches, ourlets et ajustement de
             vêtements
           </li>
           <li>
@@ -139,18 +133,18 @@
         </ul>
       </section>
 
-      <section>
+      <section class="competence">
         <!--compétences regroupent les contenues soft skills, hard skills et les langues-->
         <h2>Compétences</h2>
         <h3>Soft Skills</h3>
         <ul>
-          <li>Organisation et gestion du temps</li>
-          <li>Discipline et rigueur</li>
+          <li> Organisation et gestion du temps</li>
+          <li> Discipline et rigueur</li>
           <li>
-            <strong>Créative</strong>, active et capable de trouver des idées
+            <strong> Créative</strong>, active et capable de trouver des idées
             pour partager en équipe
           </li>
-          <li>Motivée, autonome et autodidacte</li>
+          <li> Motivée, autonome et autodidacte</li>
         </ul>
 
         <h3>Hard Skills</h3>
@@ -166,23 +160,23 @@
 
         <h3>Langues (autodidacte)</h3>
         <ul>
-          <li>Anglais</li>
-          <li>Turc</li>
-          <li>Espagnol</li>
-          <li>Russe</li>
+          <li> Anglais</li>
+          <li> Turc</li>
+          <li> Espagnol</li>
+          <li> Russe</li>
         </ul>
       </section>
-      <section class="loisir">
-        <!--ils regrouppent mes loisirs-->
-        <h2>Loisirs</h2>
-        <ul>
-          <li>
-            Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse,
-            Grèce et Turquie)
-          </li>
-          <li>Dessiner (beaucoup)</li>
-        </ul>
-      </section>
+        <section class="loisir">
+            <!--ils regrouppent mes loisirs-->
+            <h2>Loisirs</h2>
+            <ul>
+            <li>
+               Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse,
+                Grèce et Turquie)
+            </li>
+            <li> Dessiner (beaucoup)</li>
+            </ul>
+        </section>
     </main>
   </body>
 </html>
