--- a/index.html
+++ b/index.html
@@ -25,112 +25,120 @@
   <body>
     <main>
       <!--c'est le contenu de la page depuis le début-->
+      <h1>Zélal Ozkan</h1>
       <header>
         <!--le sujet du CV-->
-        <h1>Zélal OZKAN</h1>
-        <img src="photonws.jpg" alt="cv zelal" width="110" height="150" />
-        <p class="sous-titre">
-          <!--ce qu'on doit voir en premier pour savoir le sujet-->
-          <strong>Candidature pour un contrat d'alternance en communication graphique</strong>
-        </p>
-        <p class="intro">
-          Actuellement étudiante en 1ère année à la formation Normandie Web
-          School, j'ai pour objectif de devenir une experte dans le domaine du
-          <strong> design.</strong> J'ai acquis et
-          <strong> continue d'apprendre par moi-même </strong> les compétences
-          nécessaires.
-        </p>
+
+          <img  src="white.JPG" alt="cv zelal" width="150" height="200"/>
+
+            <!--ce qu'on doit voir en premier pour savoir le sujet-->
+        <div>
+            <p><h2>Candidature pour un contrat d'alternance en communication graphique</h2></p>
+            Actuellement étudiante en 1ère année à la formation Normandie Web
+            School, j'ai pour objectif de devenir une experte dans le domaine du
+            <strong> design.</strong><br>J'ai acquis et
+            <strong> continue d'apprendre par moi-même </strong> les compétences
+            nécessaires.
+        </div>
       </header>
-        <section>
-            <!--les contacts sont des regroupements de contenus proches-->
-            <table>
-            <tr>
-                <td><img src="email.png" width="15px"></td>
-                <td>
-                <a href="mailto:zozkan@normandiewebschool.fr"
-                    >zozkan@normandiewebschool.fr</a
-                >
-                </td>
-            </tr>
-            <tr>
-                <td><strong>LinkedIn</strong></td>
-                <td>
-                <a
-                    href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
-                    target="_blank"
-                    >Zélal Ozkan</a
-                >
-                </td>
-            </tr>
-            <tr>
-                <td><strong>Behance</strong>(portfolio)</td>
-                <td>
-                <a href="https://www.behance.net/zsultanozkan" target="_blank"
-                    >Zélal Ozkan</a
-                >
-                </td>
-            </tr>
-            <tr>
-                <td><strong>Adresse</strong></td>
-                <td>67, rue du 11 Novembre 1918 LOUVIERS</td>
-            </tr>
-            <tr>
-                <td><strong>Téléphone</strong></td>
-                <td><a href="tel:0768678744">07 68 67 87 44</a></td>
-            </tr>
-            </table>
+
+        <section class="contact">
+
+            <h2>Contacts</h2>
+              <!--les contacts sont des regroupements de contenus proches-->
+              <table>
+              <tr>
+                  <td><img src="email.png" width="15px"></td>
+                  <td>
+                  <a href="mailto:zozkan@normandiewebschool.fr"
+                      >zozkan@normandiewebschool.fr</a
+                  >
+                  </td>
+              </tr>
+              <tr>
+                  <td><img src="linkedin.png" width="15px"></td>
+                  <td>
+                  <a
+                      href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
+                      target="_blank"
+                      >Zélal Ozkan</a>
+                  </td>
+              </tr>
+              <tr>
+                  <td><img src="behance.png" width="15px"></td>
+                  <td>
+                  <a href="https://www.behance.net/zsultanozkan" target="_blank"
+                      >Zélal Ozkan</a
+                  >
+                  </td>
+              </tr>
+              <tr>
+                  <td><img src="accueil.png" width="15px"></td>
+                  <td>67, rue du 11 Novembre 1918 <br> LOUVIERS</td>
+              </tr>
+              <tr>
+                  <td><img src="telephone.png" width="15px"></td>
+                  <td><a href="tel:0768678744">07 68 67 87 44</a></td>
+              </tr>
+              </table>   
         </section>
-      <section class="formation">
-        <!--idem pour formation-->
-        <h2>Formations</h2>
-
-            <h3>
-              <a href="https://normandiewebschool.fr/" target="_blank">Normandie Web School</a>
-              - 2023/2026
-            </h3>
-            <p>
-              Bachelor chef de projet digital -
-              <strong> Communication graphique </strong>
-            </p>
-            <ul>
-              <li> Veille et culture design</li>
-              <li> Fondamentaux identité visuelle</li>
-              <li> Print</li>
-              <li> Visuels pour le web et les réseaux sociaux</li>
-              <li> Maquettes et prototypage</li>
-            </ul>
-          </li>
-            <h3>Lycée Les Fontenelles - 2020/2023</h3>
-            <p>
-              Baccalauréat Général spécialité mathématiques et LLCER anglais
-            </p>
-          </li>
-
-      </section>
 
       <section class="experience">
-        <!--expériences aussi-->
-        <h2>Expériences</h2>
-        <h3>Stage de 3ème: Pharmacie des Plantes - 2020 à Paris</h3>
-        <ul>
-          <li> Organiser les rangements des rayons et des stocks</li>
-          <li> Adapter envers les clients</li>
-          <li>
-            Observer et assister aux pharmaciens dans la délivrances des
-            médicaments et le conseil aux patients
-          </li>
-        </ul>
-        <h3>Stage d'été Acacias Retouche - 2019 à Paris</h3>
-        <ul>
-          <li> Organiser et ranger les tissus</li>
-          <li> Apprentissage des techniques de retouches, ourlets et ajustement de
-            vêtements
-          </li>
-          <li>
-            <strong> Capacité à être créative et imaginative</strong> à la
-            création (trousse, sac, foulard,...)
-          </li>
-        </ul>
+        <!--idem pour formation-->
+
+        <div class="colonne">
+          <div class="gauche">
+              <section>        <h2>Formations</h2>
+                <h3>
+                  <a href="https://normandiewebschool.fr/" target="_blank">Normandie Web School</a>
+                  - 2023/2026
+                </h3>
+                <p>
+                  Bachelor chef de projet digital -
+                  <strong> Communication graphique </strong>
+                </p>
+                <ul>
+                  <li> Veille et culture design</li>
+                  <li> Fondamentaux identité visuelle</li>
+                  <li> Print</li>
+                  <li> Visuels pour le web et les réseaux sociaux</li>
+                  <li> Maquettes et prototypage</li>
+                </ul>
+              </li>
+                <h3>Lycée Les Fontenelles - 2020/2023</h3>
+                <p>
+                  Baccalauréat Général spécialité mathématiques et LLCER anglais
+                </p>
+              </li></section>
+          </div>
+          <div class="droite">
+            <section>      
+              <!--expériences aussi-->
+              <h2>Expériences</h2>
+              <h3>Stage de 3ème: Pharmacie des Plantes - 2020 à Paris</h3>
+              <ul>
+                <li> Organiser les rangements des rayons et des stocks</li>
+                <li> Adapter envers les clients</li>
+                <li>
+                  Observer et assister aux pharmaciens dans la délivrances des
+                  médicaments et le conseil aux patients
+                </li>
+              </ul>
+              <h3>Stage d'été Acacias Retouche - 2019 à Paris</h3>
+              <ul>
+                <li> Organiser et ranger les tissus</li>
+                <li> Apprentissage des techniques de retouches, ourlets et ajustement de
+                  vêtements
+                </li>
+                <li>
+                  <strong> Capacité à être créative et imaginative</strong> à la
+                  création (trousse, sac, foulard,...)
+                </li>
+              </ul>
+            </section></section>
+          </div>
+        </div>
+
       </section>
 
       <section class="competence">
@@ -145,6 +153,9 @@
             pour partager en équipe
           </li>
           <li> Motivée, autonome et autodidacte</li>
+          <p>
+            <img src="ibis.png" width="20px">
+            <img src="canva.png" width="35px">
         </ul>
 
         <h3>Hard Skills</h3>
@@ -156,6 +167,13 @@
           <li>
             Expérience dans l'utilisation de logiciels d'image de synthèse
           </li>
+          <p>
+            <img src="indesign.png" width="20px">
+            <img src="illustrateur.png" width="20px">
+            <img src="photoshop.png" width="20px">
+            <img src="figma.png" width="20px">
+            <img src="html-5.png" width="20px">
+            <img src="css-3.png" width="20px">
         </ul>
 
         <h3>Langues (autodidacte)</h3>
