--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="script.js"></script>
   </head>
@@ -29,11 +26,11 @@
       <header>
         <!--le sujet du CV-->
 
-          <img  src="white.JPG" alt="cv zelal" width="150" height="200"/>
+          <img  src="white.JPG" alt="Photo de profile de Zelal" height="200"/>
 
             <!--ce qu'on doit voir en premier pour savoir le sujet-->
         <div>
-            <p><h2>Candidature pour un contrat d'alternance en communication graphique</h2></p>
+            <p><h2>Candidature pour un contrat d'alternance en communication graphique</h2>
             Actuellement étudiante en 1ère année à la formation Normandie Web
             School, j'ai pour objectif de devenir une experte dans le domaine du
             <strong> design.</strong><br>J'ai acquis et
@@ -48,47 +45,34 @@
               <!--les contacts sont des regroupements de contenus proches-->
               <table>
               <tr>
-                  <td><img src="email.png" width="15px"></td>
-                  <td>
-                  <a href="mailto:zozkan@normandiewebschool.fr"
-                      >zozkan@normandiewebschool.fr</a
-                  >
-                  </td>
+                <td><img src="email.png" width="15" alt=""></td>
+                <td><a href="mailto:zozkan@normandiewebschool.fr">zozkan@normandiewebschool.fr</a></td>
               </tr>
               <tr>
-                  <td><img src="linkedin.png" width="15px"></td>
-                  <td>
-                  <a
-                      href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/"
-                      target="_blank"
-                      >Zélal Ozkan</a>
-                  </td>
+                <td><img src="linkedin.png" width="15" alt=""></td>
+                <td><a href="https://www.linkedin.com/in/z%C3%A9lal-ozkan-7b8167291/" target="_blank">Zélal Ozkan</a></td>
               </tr>
               <tr>
-                  <td><img src="behance.png" width="15px"></td>
-                  <td>
-                  <a href="https://www.behance.net/zsultanozkan" target="_blank"
-                      >Zélal Ozkan</a
-                  >
-                  </td>
+                <td><img src="behance.png" width="15" alt=""></td>
+                <td><a href="https://www.behance.net/zsultanozkan" target="_blank">Zélal Ozkan</a></td>
               </tr>
               <tr>
-                  <td><img src="accueil.png" width="15px"></td>
-                  <td>67, rue du 11 Novembre 1918 <br> LOUVIERS</td>
+                <td><img src="accueil.png" width="15" alt=""></td>
+                <td>67, rue du 11 Novembre 1918 <br> LOUVIERS</td>
               </tr>
               <tr>
-                  <td><img src="telephone.png" width="15px"></td>
-                  <td><a href="tel:0768678744">07 68 67 87 44</a></td>
+                <td><img src="telephone.png" width="15" alt=""></td>
+                <td><a href="tel:0768678744">07 68 67 87 44</a></td>
               </tr>
               </table>   
         </section>
 
-      <section class="experience">
         <!--idem pour formation-->
 
         <div class="colonne">
           <div class="gauche">
-              <section>        <h2>Formations</h2>
+              <section>        
+                <h2>Formations</h2>
                 <h3>
                   <a href="https://normandiewebschool.fr/" target="_blank">Normandie Web School</a>
                   - 2023/2026
@@ -104,12 +88,11 @@
                   <li> Visuels pour le web et les réseaux sociaux</li>
                   <li> Maquettes et prototypage</li>
                 </ul>
-              </li>
                 <h3>Lycée Les Fontenelles - 2020/2023</h3>
                 <p>
                   Baccalauréat Général spécialité mathématiques et LLCER anglais
                 </p>
-              </li></section>
+              </section>
           </div>
           <div class="droite">
             <section>      
@@ -135,66 +118,71 @@
                   création (trousse, sac, foulard,...)
                 </li>
               </ul>
-            </section></section>
+            </section>
           </div>
         </div>
 
-      </section>
-
-      <section class="competence">
         <!--compétences regroupent les contenues soft skills, hard skills et les langues-->
-        <h2>Compétences</h2>
-        <h3>Soft Skills</h3>
-        <ul>
-          <li> Organisation et gestion du temps</li>
-          <li> Discipline et rigueur</li>
-          <li>
-            <strong> Créative</strong>, active et capable de trouver des idées
-            pour partager en équipe
-          </li>
-          <li> Motivée, autonome et autodidacte</li>
-          <p>
-            <img src="ibis.png" width="20px">
-            <img src="canva.png" width="35px">
-        </ul>
-
-        <h3>Hard Skills</h3>
-        <ul>
-          <li>
-            Maîtrise des outils nécessaires de la
-            <strong> Suite Adobe </strong> et outils colaboratifs
-          </li>
-          <li>
-            Expérience dans l'utilisation de logiciels d'image de synthèse
-          </li>
-          <p>
-            <img src="indesign.png" width="20px">
-            <img src="illustrateur.png" width="20px">
-            <img src="photoshop.png" width="20px">
-            <img src="figma.png" width="20px">
-            <img src="html-5.png" width="20px">
-            <img src="css-3.png" width="20px">
-        </ul>
-
-        <h3>Langues (autodidacte)</h3>
-        <ul>
-          <li> Anglais</li>
-          <li> Turc</li>
-          <li> Espagnol</li>
-          <li> Russe</li>
-        </ul>
-      </section>
-        <section class="loisir">
-            <!--ils regrouppent mes loisirs-->
-            <h2>Loisirs</h2>
-            <ul>
-            <li>
-               Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse,
-                Grèce et Turquie)
-            </li>
-            <li> Dessiner (beaucoup)</li>
-            </ul>
-        </section>
+        <div class="colonne">
+          <div class="gauche">
+            <section>        <h2>Compétences</h2>
+              <h3>Soft Skills</h3>
+              <ul>
+                <li> Organisation et gestion du temps</li>
+                <li> Discipline et rigueur</li>
+                <li>
+                  <strong> Créative</strong>, active et capable de trouver des idées
+                  pour partager en équipe
+                </li>
+                <li> Motivée, autonome et autodidacte</li>
+              </ul>
+                <p>
+                  <img src="ibis paint X.png" width="30" alt="">
+                  <img src="adobe-e.png" width="27,5" alt="">
+                  <img src="canva logo.png" width="30" alt="">
+                </p>
+      
+              <h3>Hard Skills</h3>
+              <ul>
+                <li>
+                  Maîtrise des outils nécessaires de la
+                  <strong> Suite Adobe </strong> et outils colaboratifs
+                </li>
+                <li>
+                  Expérience dans l'utilisation de logiciels d'image de synthèse
+                </li>
+              </ul>
+              <img src="indesign.png" width="20" alt="">
+              <img src="illustrateur.png" width="20" alt="">
+              <img src="photoshop.png" width="20" alt="">
+              <img src="figma.png" width="20" alt="">
+              <img src="Visual.png" width="20" alt="">
+              <img src="html-5.png" width="20" alt="">
+              <img src="css-3.png" width="20" alt="">
+      
+              <h3>Langues (autodidacte)</h3>
+              <ul>
+                <li> Anglais ++++</li>
+                <li> Turc ++++</li>
+                <li> Espagnol +++</li>
+                <li> Russe ++</li>
+              </ul>
+            </section>
+          </div>
+          <div class="droite">
+            <section> 
+              <!--ils regrouppent mes loisirs-->
+              <h2>Loisirs</h2>
+              <ul>
+                <li>
+                  Voyager (France, Angleterre, Pays-Bas, Belgique, Italie, Suisse,
+                    Grèce et Turquie)
+                </li>
+                <li> Dessiner (beaucoup)</li>
+              </ul>
+            </section>
+          </div>
+        </div>
     </main>
   </body>
 </html>
