--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Titre de la page</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
@@ -137,9 +140,9 @@
                 <li> Motivée, autonome et autodidacte</li>
               </ul>
                 <p>
-                  <img src="ibis paint X.png" width="30" alt="">
-                  <img src="adobe-e.png" width="27,5" alt="">
-                  <img src="canva logo.png" width="30" alt="">
+                  <img src="ibis-paint-x.png" width="30" alt="">
+                  <img src="adobe-e.png" width="27" alt="">
+                  <img src="canva-logo.png" width="30" alt="">
                 </p>
       
               <h3>Hard Skills</h3>
@@ -156,7 +159,7 @@
               <img src="illustrateur.png" width="20" alt="">
               <img src="photoshop.png" width="20" alt="">
               <img src="figma.png" width="20" alt="">
-              <img src="Visual.png" width="20" alt="">
+              <img src="visual.png" width="20" alt="">
               <img src="html-5.png" width="20" alt="">
               <img src="css-3.png" width="20" alt="">
       
