recommit pour repush

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Si on voit l'aperçu (show preview), "Compétences" et "Loisirs" sont centrés et il y a des listes avec une étoile. Sur Github, où on peut voir le CV, ça n'a pas affiché comme sur Show Preview malgrès plusieurs actualisation...  -->
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -25,7 +26,7 @@
   <body>
     <main>
       <!--c'est le contenu de la page depuis le début-->
-      <h1>Zélal Ozkan</h1>
+        <h1>Zélal Ozkan</h1>
       <header>
         <!--le sujet du CV-->
 
@@ -126,9 +127,8 @@
         </div>
 
         <!--compétences regroupent les contenues soft skills, hard skills et les langues-->
-        <div class="colonne">
-          <div class="gauche">
-            <section>        <h2>Compétences</h2>
+            <section class="competence">        
+              <h2>Compétences</h2>
               <h3>Soft Skills</h3>
               <ul>
                 <li> Organisation et gestion du temps</li>
@@ -171,9 +171,8 @@
                 <li> Russe ++</li>
               </ul>
             </section>
-          </div>
-          <div class="droite">
-            <section> 
+
+            <section class="loisir"> 
               <!--ils regrouppent mes loisirs-->
               <h2>Loisirs</h2>
               <ul>
@@ -184,8 +183,6 @@
                 <li> Dessiner (beaucoup)</li>
               </ul>
             </section>
-          </div>
-        </div>
     </main>
   </body>
 </html>
