--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.typekit.net/esj8xlm.css">
+    <link rel="stylesheet" href="https://use.typekit.net/esj8xlm.css">
     <link rel="stylesheet" href="./css/style.css" />
     <script src="script.js"></script>
   </head>
@@ -35,7 +34,7 @@
             <!--ce qu'on doit voir en premier pour savoir le sujet-->
         <div>
             <p><h2>Candidature pour un contrat d'alternance en communication graphique</h2>
-            Actuellement étudiante en 1ère année à la formation Normandie Web
+            Actuellement étudiante en 1ère année à la Normandie Web
             School, j'ai pour objectif de devenir une experte dans le domaine du
             <strong> design.</strong><br>J'ai acquis et
             <strong> continue d'apprendre par moi-même </strong> les compétences
@@ -102,6 +101,12 @@
             <section>      
               <!--expériences aussi-->
               <h2>Expériences</h2>
+              <h3>Indépendante graphiste</h3>
+              <ul>
+                <li>Création logo</li>
+                <li>Lauréate d'un concours</li>
+                <li>Création charte graphique</li>
+              </ul>
               <h3>Stage de 3ème: Pharmacie des Plantes - 2020 à Paris</h3>
               <ul>
                 <li> Organiser les rangements des rayons et des stocks</li>
