ajout logo adobe

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                   <img src="ibis-paint-x.png" width="30" alt="">
                   <img src="adobe-e.png" width="27" alt="">
                   <img src="canva-logo.png" width="30" alt="">
+                  <img src="bazaart-logo.png" width="27" alt="">
                 </p>
       
               <h3>Hard Skills</h3>
@@ -163,6 +164,8 @@
               <img src="indesign.png" width="20" alt="">
               <img src="illustrateur.png" width="20" alt="">
               <img src="photoshop.png" width="20" alt="">
+              <img src="lightroom-classic-logo.png" width="20" alt="">
+              <img src="premiere-pro-logo.png" width="20" alt="">
               <img src="figma.png" width="20" alt="">
               <img src="visual.png" width="20" alt="">
               <img src="html-5.png" width="20" alt="">
